--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,4 +21,12 @@
     </activity>
   </application>
 
+  <!--Ability to access the camera -->
+  <uses-permission android:name="android.permission.CAMERA" />
+  <!--Ability to save pictures -->
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+  <!--App cannot work without camera-->
+  <uses-feature android:name="android.hardware.camera" />
+
 </manifest>
